labs/mod-08/kind/api/stress-oom.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stress-memory
  namespace: mod-08-ns
spec:
  containers:
  - name: stress-mem
    image: polinux/stress
    resources:
      requests:
        memory: "50Mi"
      limits:
        memory: "100Mi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
