labs/mod-08/kind/api/echo-pods-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-dp
  namespace: mod-08-ns
  labels:
    app: echo-dp
spec:
  selector:
    matchLabels:
      rsc: echo-app
  replicas: 2
  template:
    metadata:
      name: echo-pod
      labels:
        rsc: echo-app
    spec:
      containers:
      - name: echo-cntr
        image: us.gcr.io/k8s-artifacts-prod/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-ci-svc
  namespace: mod-08-ns
  labels:
    app: echo
spec:
  type: ClusterIP
  selector:
      rsc: echo-app
  ports:
    - name: echo-app-port-internal
      protocol: TCP
      port: 8888
      targetPort: 8080
