labs/mod-08/kind/api/ingress-echo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /echo
        backend:
          service:
            name: echo-ci-svc
            port:
              number: 8888
